--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 waslap/bin/waslap.swf
 waslap/bin/expressInstall.swf
 waslap/src/assets/images/Thumbs.db
+waslap/src/assets/images/in-game/Thumbs.db
+waslap/src/assets/images/menu/Thumbs.db
