--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ waslap/bin/expressInstall.swf
 waslap/src/assets/images/Thumbs.db
 waslap/src/assets/images/in-game/Thumbs.db
 waslap/src/assets/images/menu/Thumbs.db
+waslap/src/assets/images/menu/Thumbs.db
